--- a/src/cart.css
+++ b/src/cart.css
@@ -1,7 +1,8 @@
-.body {
+/* .body {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    display: flex;
 }
 
 
@@ -10,4 +11,4 @@ cartIconDiv{
 width: 2px;;
 
 
-}
+} */
